// Copyright 2024 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1beta1;

import "accrescent/directory/v1beta1/compatibility.proto";
import "accrescent/directory/v1beta1/download_size.proto";
import "accrescent/directory/v1beta1/image.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1beta1";

// A localized store listing for a given app.
message AppListing {
  // The application ID this listing is associated with
  optional string app_id = 1;

  // The language of this listing's fields as a BCP-47 tag.
  optional string language = 2;

  // The proper name of the app, possibly including very short descriptive text
  // (e.g. "SecureChat - Secure Texting").
  optional string name = 3;

  // A short description of the app to be shown in headers and small screen
  // spaces.
  optional string short_description = 4;

  // The app's primary icon, usually the same as the launcher icon.
  Image icon = 5;

  // The display name of the app's latest version, e.g., "1.4.2".
  optional string version_name = 6;

  // Compatibility information between the app and the device attributes
  // specified in the request. If no device attributes were specified, this
  // field is not populated.
  Compatibility compatibility = 7;

  // The download size for this app. If no device attributes were specified or
  // the app is not compatible, this field is not populated.
  DownloadSize download_size = 8;
}
