// Copyright 2024-2025 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1;

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1";

import "accrescent/directory/v1/device_attributes.proto";
import "accrescent/directory/v1/release_channel.proto";

// Request defining parameters for retrieving an app's download info.
message GetAppDownloadInfoRequest {
  // The application ID of the download info to retrieve. Required.
  optional string app_id = 1;
  // The current device's hardware and OS attributes used to determine app
  // compatibility, download size, etc. Required.
  DeviceAttributes device_attributes = 2;
  // The release channel to retrieve download info for. If unspecified, defaults
  // to the stable channel.
  ReleaseChannel release_channel = 3;
  // The base version of the app to get download info from (almost always the
  // currently installed version). If unspecified, indicates that this is an
  // initial installation instead of an update.
  optional uint32 base_version_code = 4;
}
