syntax = "proto3";

package accrescent.directory.v1;

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1";

import "accrescent/directory/v1/app_listing.proto";

// Response to requesting a list of app listings.
message ListAppListingsResponse {
  // The app listings matching the request parameters.
  repeated AppListing listings = 1;
  // An opaque token which, if passed to another invocation of ListAppListings,
  // will return the next page of app listings.
  optional string next_page_token = 2;
}
